--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ a:active,
 a:focus,
 a:active {
   text-decoration: none;
-  outline: none
+  outline: none;
 }
 
 a:hover,
@@ -121,7 +121,7 @@ ul {
 
 /*btn-primary*/
 .btn-primary {
-  background-color: #FFC107;
+  background-color: #ffc107;
 }
 
 .btn-primary:hover,
@@ -173,7 +173,7 @@ button:focus,
   -webkit-flex: 1 0 0;
   flex: 1 0 0;
   position: relative;
-  background: rgba(255, 255, 255, .8);
+  background: rgba(255, 255, 255, 0.8);
   border-right: 1px solid #eaeaea;
 }
 
@@ -184,8 +184,7 @@ button:focus,
   background: #ffffff;
 }
 
-@media (max-width : 768px) {
-
+@media (max-width: 768px) {
   .columns-block {
     display: block;
     margin: 0;
@@ -205,7 +204,7 @@ button:focus,
   }
 }
 
-@media (min-width : 769px) and (max-width : 1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   .columns-block {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -235,7 +234,7 @@ button:focus,
   border-bottom: 1px solid #eaeaea;
 }
 
-@media (max-width : 480px) {
+@media (max-width: 480px) {
   .section-wrapper {
     padding: 30px 20px;
   }
@@ -289,7 +288,7 @@ button:focus,
   margin-top: 40px;
 }
 
-@media (max-width : 768px) {
+@media (max-width: 768px) {
   .header {
     padding: 0;
     text-align: center;
@@ -375,9 +374,11 @@ button:focus,
   bottom: -10px;
   padding: 40px 15px 5px;
   width: 100%;
-  background: -webkit-linear-gradient(top,
-      transparent 0%,
-      rgba(0, 0, 0, 0.5) 100%);
+  background: -webkit-linear-gradient(
+    top,
+    transparent 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
 }
 
 .portfolio-item .portfolio-info h3 {
@@ -391,9 +392,7 @@ button:focus,
 }
 
 .portfolio-item:hover .portfolio-info {
-  background: -webkit-linear-gradient(top,
-      transparent 0%,
-      #000 100%);
+  background: -webkit-linear-gradient(top, transparent 0%, #000 100%);
 }
 
 /*-------------------
@@ -423,7 +422,7 @@ button:focus,
   padding: 30px 50px;
 }
 
-@media (max-width : 480px) {
+@media (max-width: 480px) {
   .footer {
     padding: 10px 20px;
   }
